Update Colorectal collaborators FAQ question text

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -382,7 +382,8 @@
                     {
                         "Question": "¿Cómo ha sido la participación de los pacientes en el diseño de este proyecto?",
                         "Paragraphs": [
-                            "Count Me In ha trabajado estrechamente con pacientes, seres queridos y defensores de pacientes en la comunidad del cáncer colorrectal para desarrollar este proyecto. Los pacientes participaron en todos los aspectos del diseño, incluidos el concepto, los objetivos, las comunicaciones, los formularios y el sitio web."
+                            "Count Me In ha trabajado estrechamente con pacientes, seres queridos y defensores de pacientes en la comunidad del cáncer colorrectal para desarrollar este proyecto. Los pacientes participaron en todos los aspectos del diseño, incluidos el concepto, los objetivos, las comunicaciones, los formularios y el sitio web.",
+                            "Estamos orgullosos de tener como aliados a Colorectal Cancer Resource & Action Network, Raymond Foundation, GI Cancers Alliance, Colorectal Cancer Canada, Fight Colorectal Cancer, Colon Cancer Stars, Global Colon Cancer Association, Colorectal Cancer Alliance y Colon Cancer Coalition por colaborar y apoyar este proyecto."
                         ]
                     }
                 ]
