--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -384,7 +384,7 @@
                         "Question": "How have patients been involved in the design of this project?",
                         "Paragraphs": [
                             "We have worked closely with patients, parents, and patient advocates within the colorectal cancer community from the beginning of this project through its design and implementation. The community has been involved in all aspects including concept, goals, messaging, forms, and the design of this website. We have also worked with a Scientific Advisory Council made up of leading researchers working in colorectal cancer.",
-                            "We're proud to have our Advocacy Partners, the Colorectal Cancer Resource & Action Network, the Raymond Foundation, GI Cancers Alliance, and Colorectal Cancer Canada to partner with and support this project."
+                            "We're proud to have our Advocacy Partners, the Colorectal Cancer Resource & Action Network, Raymond Foundation, GI Cancers Alliance, Colorectal Cancer Canada, Fight Colorectal Cancer, Colon Cancer Stars, Global Colon Cancer Association, Colorectal Cancer Alliance, and Colon Cancer Coalition to partner with and support this project."
                         ]
                     }
                 ]
