Add "Ongoing" to Step 5

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -117,6 +117,7 @@
                 },
                 {
                     "Step": "STEP 5",
+                    "Time": "Ongoing",
                     "Title": "Stay involved",
                     "Text": "Over time, we will provide you with regular updates about the status of the research and share any discoveries that you have enabled us to make. We also may ask you additional questions about your experience to help with future studies — we want to hear what’s important to you.",
                     "ImageAlt": "Speech bubbles sharing hearts and data visualizations"
