DDP-6126 Changed status name for Mini Sleep Log

--- a/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
@@ -157,6 +157,10 @@
             "Continue": "Continue",
             "View": "View",
             "Schedule": "Schedule"
+        },
+        "MiniSleepLogStatuses": {
+            "Created": "New",
+            "Complete": "Complete"
         }
     },
     "SessionWillExpire": {
