DDP-6128 Added new summary for Mini Sleep log

--- a/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
@@ -161,6 +161,10 @@
         "MiniSleepLogStatuses": {
             "Created": "New",
             "Complete": "Complete"
+        },
+        "MiniSleepLogSummary": {
+            "Created": "Please complete your daily sleep logging.",
+            "Complete": "Thank you for completing today's sleep log."
         }
     },
     "SessionWillExpire": {
