DDP-6982: Update Circadia study phone number

--- a/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
@@ -54,7 +54,7 @@
         },
         "FAQ": {
             "Title": "Frequently Asked Questions",
-            "Description": "If your question is not answered below, you can call or email our study staff at <a class=\"link\" href=\"tel:16177267733\">1 (617) 726-7733</a> or <a class=\"link\" href=\"mailto:circadiastudy@mgh.harvard.edu\">circadiastudy@mgh.harvard.edu</a>.",
+            "Description": "If your question is not answered below, you can call or email our study staff at <a class=\"link\" href=\"tel:18572656742\">1 (857) 265-6742</a> or <a class=\"link\" href=\"mailto:circadiastudy@mgh.harvard.edu\">circadiastudy@mgh.harvard.edu</a>.",
             "Questions": [
                 {
                     "Title": "How long does the study take?",
@@ -94,7 +94,7 @@
                 },
                 {
                     "Title": "I still have questions/concerns that are unanswered.",
-                    "Answer": "<p class=\"faq-paragraph\">We’d be happy to answer any further questions or concerns that you may have about this study. Feel free to email us at <a class=\"link\" href=\"mailto:circadiastudy@mgh.harvard.edu\">circadiastudy@mgh.harvard.edu</a> or call us at <a class=\"link\" href=\"tel:6177267733\">(617) 726-7733</a>.</p><p class=\"faq-paragraph\">Dr. Jacqueline Lane, PhD, is the person in charge of this research study. You can call her at <a class=\"link\" href=\"tel:7166433067\">617-643-3067</a> (Monday through Friday, 9AM-5PM) or email her at <a class=\"link\" href=\"mailto:lane@chgr.mgh.harvard.edu\">lane@chgr.mgh.harvard.edu</a>.</p><p class=\"faq-paragraph\">The Circadia research study uses unencrypted email messages. Unencrypted email messages are not secure and could result in the unauthorized use or disclosure of your information. If you want to receive communications by unencrypted email despite these risks, Partners HealthCare will not be held responsible. Your preference to receive unencrypted email will apply to emails sent from this research group/study only.</p>"
+                    "Answer": "<p class=\"faq-paragraph\">We’d be happy to answer any further questions or concerns that you may have about this study. Feel free to email us at <a class=\"link\" href=\"mailto:circadiastudy@mgh.harvard.edu\">circadiastudy@mgh.harvard.edu</a> or call us at <a class=\"link\" href=\"tel:18572656742\">+1 (857) 265-6742</a>.</p><p class=\"faq-paragraph\">Dr. Jacqueline Lane, PhD, is the person in charge of this research study. You can call her at <a class=\"link\" href=\"tel:7166433067\">617-643-3067</a> (Monday through Friday, 9AM-5PM) or email her at <a class=\"link\" href=\"mailto:lane@chgr.mgh.harvard.edu\">lane@chgr.mgh.harvard.edu</a>.</p><p class=\"faq-paragraph\">The Circadia research study uses unencrypted email messages. Unencrypted email messages are not secure and could result in the unauthorized use or disclosure of your information. If you want to receive communications by unencrypted email despite these risks, Partners HealthCare will not be held responsible. Your preference to receive unencrypted email will apply to emails sent from this research group/study only.</p>"
                 }
             ]
         },
