--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -757,7 +757,8 @@
                 "E.TIMED_OUT": "Exceeded max timeout.",
                 "E.TIME_ZONE.UNAVAILABLE": "The time zone service is currently unavailable.",
                 "E.PO_BOX.INTERNATIONAL": "Cannot verify international PO Box. Please note, this can show up as an error on a successful request."
-            }
+            },
+            "UseAsEntered":  "Please use the address as entered"
         },
         "TooltipAlt": "Information",
         "Validators": {
