DDP-6897 add ability to edit mailing address from dashboard

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -507,7 +507,8 @@
             "ShowPanel": "Mostrar",
             "HidePanel": "Esconder",
             "UserLabel": "Usted",
-            "ChildLabel": "Su hijo(a){{suffix}}"
+            "ChildLabel": "Su hijo(a){{suffix}}",
+            "EditUser": "Editar"
         },
         "Password": {
             "Title": "Ingrese la contraseña.",
