DDP-6897 fix code review comments

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -597,7 +597,7 @@
         "SubmitButton": "Submit",
         "CloseButton": "Close",
         "AddButton": "ADD",
-        "CancelButton": "CANCEL",
+        "CancelButton": "Cancel",
         "NextButton": "Next",
         "PreviousButton": "Prev",
         "SavingButton": "Saving",
