--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -595,7 +595,7 @@
         "SubmitButton": "Enviar",
         "CloseButton": "Cerrar",
         "AddButton": "AGREGAR",
-        "CancelButton": "CANCELAR",
+        "CancelButton": "Cancelar",
         "NextButton": "Siguiente",
         "PreviousButton": "Atrás",
         "SavingButton": "Guardando...",
