--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -593,6 +593,7 @@
         }
     },
     "SDK": {
+        "FinishButton": "Finish",
         "SubmitButton": "Submit",
         "CloseButton": "Close",
         "AddButton": "ADD",
@@ -679,6 +680,9 @@
                 "OtherInstitution": "Other institution"
             },
             "PhysicianValidation": "Please fill out all required fields"
+        },
+        "ModalActivityBlock": {
+            "SaveButton": "Save"
         },
         "MailAddress": {
             "Fields": {
