DDP-6897 add ability to edit mailing address from dashboard (#912)
* DDP-6897 add ability to edit mailing address from dashboard

* DDP-6897 fix code review comments

* DDP-6897 unit tests

* DDP-6897 fix unit tests

* DDP-6897 unit tests

* DDP-6897 add user name into dialog title

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -509,7 +509,8 @@
             "ShowPanel": "Show",
             "HidePanel": "Hide",
             "UserLabel": "You",
-            "ChildLabel": "Your child{{suffix}}"
+            "ChildLabel": "Your child{{suffix}}",
+            "EditUser": "Edit"
         },
         "Password": {
             "Title": "Please enter the password",
@@ -596,7 +597,7 @@
         "SubmitButton": "Submit",
         "CloseButton": "Close",
         "AddButton": "ADD",
-        "CancelButton": "CANCEL",
+        "CancelButton": "Cancel",
         "NextButton": "Next",
         "PreviousButton": "Prev",
         "SavingButton": "Saving",
