DDP-6897 update label for Edit button

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -510,7 +510,7 @@
             "HidePanel": "Hide",
             "UserLabel": "You",
             "ChildLabel": "Your child{{suffix}}",
-            "EditUser": "Edit"
+            "EditUser": "Edit profile"
         },
         "Password": {
             "Title": "Please enter the password",
