--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -508,7 +508,7 @@
             "HidePanel": "Esconder",
             "UserLabel": "Usted",
             "ChildLabel": "Su hijo(a){{suffix}}",
-            "EditUser": "Editar"
+            "EditUser": "Editar Perfil"
         },
         "Password": {
             "Title": "Ingrese la contraseña.",
