Add missing SDK translations

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -682,7 +682,12 @@
             "PhysicianValidation": "Please fill out all required fields"
         },
         "ModalActivityBlock": {
-            "SaveButton": "Save"
+            "SaveButton": "Save",
+            "NumQuestionsAnswered": "{{number}} questions answered",
+            "Complete": "Complete",
+            "EditButton": "Edit",
+            "DeleteButton": "Delete",
+            "CancelButton": "Cancel"
         },
         "MailAddress": {
             "Fields": {
