--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/zh.json
@@ -798,7 +798,8 @@
                 "E.TIMED_OUT": "超出最大超时时间。",
                 "E.TIME_ZONE.UNAVAILABLE": "时区服务当前不可用。",
                 "E.PO_BOX.INTERNATIONAL": "无法验证国际邮政信箱。请注意，这可能会在成功请求后显示为错误。"
-            }
+            },
+            "UseAsEntered": "[ZH] We are unable to confirm that the address is valid. Please check this box to use the address as entered."
         },
         "TooltipAlt": "信息",
         "Validators": {
