--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
@@ -798,7 +798,8 @@
                 "E.TIMED_OUT": "Se superó el tiempo máximo de espera.",
                 "E.TIME_ZONE.UNAVAILABLE": "El servicio de zonas horarias no está disponible en este momento.",
                 "E.PO_BOX.INTERNATIONAL": "No se puede verificar la casilla postal internacional. Tenga en cuenta que este error puede aparecer en solicitudes satisfactorias."
-            }
+            },
+            "UseAsEntered": "No podemos confirmar que esta dirección es válida. Marque esta casilla para confirmar el uso de esta dirección como ha sido ingresada."
         },
         "TooltipAlt": "Información",
         "Validators": {
