--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
@@ -613,7 +613,8 @@
                 "E.TIMED_OUT": "تم تجاوز الحد الأقصى للمهلة.",
                 "E.TIME_ZONE.UNAVAILABLE": "خدمة المنطقة الزمنية غير متوفرة حاليًا.",
                 "E.PO_BOX.INTERNATIONAL": "لا يمكن التحقق من صندوق البريد الدولي. يُرجى ملاحظة أن هذا قد يظهر كخطأ في وجود طلب ناجح."
-            }
+            },
+            "UseAsEntered": "[AR] We are unable to confirm that the address is valid. Please check this box to use the address as entered."
         },
         "TooltipAlt": "المعلومات",
         "SubjectPanel": {
