--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
@@ -613,7 +613,8 @@
                 "E.TIMED_OUT": "Превышено максимальное время тайм-аута.",
                 "E.TIME_ZONE.UNAVAILABLE": "Служба часовых поясов в настоящее время недоступна.",
                 "E.PO_BOX.INTERNATIONAL": "Невозможно подтвердить международный почтовый ящик. Обратите внимание, что это может проявиться как ошибка при успешном запросе."
-            }
+            },
+            "UseAsEntered": "Мы не можем подтвердить корректность введенного адреса. Отметьте чекбокс если хотите использовать адрес в указанном виде."
         },
         "TooltipAlt": "Информация",
         "SubjectPanel": {
