--- a/ddp-workspace/projects/ddp-singular/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-singular/src/assets/i18n/en.json
@@ -65,6 +65,183 @@
   "ParticipantDeletionDialog": {
     "Text": "Are you sure you want to delete this participant? All data entered for this participant will be cleared."
   },
+  "FAQ": {
+    "Title": "About Project Singular",
+    "P1": "We don’t know why some children are born with single ventricle heart defects. Project Singular is a research study that will try to find out.",
+    "P2": "To do this, we need to look at DNA from at least 5,000 people with single ventricle heart disease. We also need to look at DNA from some of their close family members. We hope that by doing this, we can find the cause of single ventricle heart defects.  We hope that will lead to better treatments for single ventricle heart disease.",
+    "Title2": "About the Research",
+    "P3": "The goal of Project Singular is to find out why single ventricle heart defects form. To do this, we want to study DNA from patients with these defects. We also want to study DNA from some of their close family members.",
+    "P4": "We don’t know what causes single ventricle heart disease. This makes treatment very hard. Project Singular will collect genetic data and health information from at least 5,000 patients. We also wish to collect this information from some of their close family members. It will help us learn why single ventricle heart defects form. It will also help us learn how these defects may lead to other health problems.",
+    "P5": "When we look at information from many patients and their families, we may find patterns. We may also find differences. This can help answer why and how single ventricle heart defects form. This may help us prevent these defects in the future.  This may also help us find better treatments.",
+    "Questions": [
+      {
+        "Title": "Questions About the Study",
+        "Items": [
+          {
+            "Name": "How will Project Singular learn about single ventricle heart defects?",
+            "Answers": [
+              "We will collect a saliva (spit) sample from people enrolled in this study. We will use these samples to look at DNA. We want to see if we can find the causes of single ventricle heart defects. If we can learn what causes single ventricle heart defects, we will be able develop better treatments.",
+              "If you join, we will ask for your medical records to be shared with us. You will fill out a short survey to help us learn a bit more about you and your medical history. Your privacy is very important to us so we will store the information from your spit sample and medical records in a secure online location."
+            ]
+          },
+          {
+            "Name": "Who can take part in Project Singular?",
+            "Answers": [
+              "The study is open to anyone living in the United States or Canada who is: <ul><li>Living with a single ventricle heart defect. The person can be any age. They can be at any stage in their patient journey (pre-Fontan, post-Fontan, or post-heart transplant).</li><li>A biological(birth) parent or sibling of someone with a single ventricle heart defect.</li><li>A biological (birth) child of someone with a single ventricle heart defect.</li></ul>",
+              "Children who are minors must have consent from a parent or guardian.",
+              "Adults not able to consent themselves must have consent from a legally authorized representative (such as a guardian). "
+            ]
+          },
+          {
+            "Name": "What should I know about participating in this study?",
+            "Answers": [
+              "You won’t need to go to a clinic to take part. You can sign up on this website. We will mail you a saliva (spit) collection kit to use at home.",
+              "You will not be paid to take part in this study.",
+              "There is no cost to take part in this study.",
+              "You can quit the study at any time.",
+              "If you have any questions, you may call us at 650-761-6486. Or email us at contact@projectsingular.org."
+            ]
+          },
+          {
+            "Name": "Will I learn anything about my (or my child or other family member’s) single ventricle heart defect?",
+            "Answers": [
+              "Not right now. This is because we don’t know which parts of DNA cause single ventricle heart defects. That’s why we’re doing this study. This means we don’t know which parts of your (or your child or family member’s) DNA may cause single ventricle heart disease. So we cannot give you any information about your (or your family’s) genetic cause.",
+              "n the future, we may make those discoveries. If we do, we may contact you. We may ask if you want information about your (or your child’s) genetics specific to single ventricle heart disease. We don’t know if or when this might be possible.",
+              "Single ventricle heart disease likely comes from many causes. That means all results may not apply to all patients. Not even major discoveries.  Project Singular may provide a summary of research results. We may email you the summary or we may put it on our website. We may publish results. But the results may not be specific to your (or your child or family member’s) single ventricle heart defect. ",
+              "Your doctor will not get your (or your child’s) genetic results. You will not get any data files such as your (or your child’s) genetic sequence."
+            ]
+          },
+          {
+            "Name": "Will I learn anything about any other conditions that may affect my (or my child’s) health?",
+            "Answers": [
+              "Maybe.  In this study, we want to understand the causes of single ventricle heart disease. To do this, we will look at every piece of your (or your child’s) DNA. When we do, we may find changes in the DNA. These changes may be linked to some other disease that is not single ventricle heart disease. These results are called “secondary findings.” This type of result is not common. Most people in this study will not have a result like this.",
+              "But we could find this result. If we do, and you have told us you want to know, we will contact you. We will make sure you want to know your result. Because this is a research study, we can’t promise a specific timeframe that we can send you the result.",
+              "Right now, we cannot return these secondary findings to those who live in Canada because of local and country guidelines.  If those guidelines change in the future to allow for return of these results, we will do so.",
+              "If you have one of these rare secondary findings and you have told us that you would want to know about it, we will connect you with a genetic counselor who can arrange a second genetic test to confirm the finding. This second test is free of charge to you.",
+              "If the finding is confirmed, the genetic counselor will work with you. They will answer your questions and help you understand what the finding means. They can also arrange for other family members to be tested free of charge. They will help you understand what the next steps are for you."
+            ]
+          },
+          {
+            "Name": "Why are family members of people with single ventricle disease asked to participate?",
+            "Answers": [
+              "The causes of single ventricle heart disease are complex.  Looking at the DNA of patients’ family members may help. This may show changes that lead to single ventricle heart defects within the family. What we learn may help us find causes for single ventricle heart disease.  That might help develop better treatments.",
+              "<p>How many family members do you need to take part?<p><ul><li>The more DNA samples we have, the better. We would like patients and their close family members to join the study. But even one family member is helpful.</li></ul>"
+            ]
+          },
+          {
+            "Name": "Who pays for Project Singular?",
+            "Answers": [
+              "Additional Ventures is paying for Project Singular. Additional Ventures is a nonprofit foundation. This means Additional Ventures does not make money (a profit) for its work on Project Singular."
+            ]
+          },
+          {
+            "Name": "Will you contact me in the future?",
+            "Answers": [
+              "<p>We may contact you in the future for:<p><ul><li>More information we may need for the study.</li><li>To invite you to take other surveys or studies.</li><li>To share information about the study progress and/or discoveries.</li></ul>"
+            ]
+          },
+          {
+            "Name": "How long will it take to reach the project goal?",
+            "Answers": [
+              "We don’t know how long it will take to reach our goal. That’s why we don’t have an end date for Project Singular right now."
+            ]
+          },
+          {
+            "Name": "Will you find new treatments for people with single ventricle heart defects?",
+            "Answers": [
+              "We don’t know. But results from Project Singular could be the first step to help find new treatments."
+            ]
+          },
+          {
+            "Name": "How much spit do you need for the sample?",
+            "Answers": [
+              "We need a little less than one teaspoon."
+            ]
+          },
+          {
+            "Name": "How do I mail back my saliva kit if I live in the U.S.? ",
+            "Answers": [
+              "The kit will have a prepaid return label on the outside of the box. You can mail the kit at a U.S. post office near you. All costs will already be paid by the study. There is no cost to you to mail it back to us."
+            ]
+          },
+          {
+            "Name": "How do I mail back my saliva kit if I live in Canada?",
+            "Answers": [
+              "The kit will include a commercial invoice label. Put the label on the front of the box. It’s okay to cover up the logo.",
+              "Take the kit to any FedEx office or drop box. The kit already has a prepaid return label on the back of the box. All costs are will already be paid by the study. There is no cost to you to mail it back to us."
+            ]
+          }
+        ]
+      },
+      {
+        "Title": "Questions About DNA and Genetics",
+        "Items": [
+          {
+            "Name": "What is DNA and why is it important?",
+            "Answers": [
+              "We will study your spit so we can look at your cells. We want to read the DNA inside these cells. We can do this through gene sequencing. Genes are part of your DNA. Genes have instructions for how your body should work. Sometimes genes give instructions that make it more likely for us to get a certain disease.",
+              "Genetic research is the study of DNA. We want to find out which genes and things in a person’s environment might lead to disease. If we can find what causes diseases, we can find better ways to prevent, diagnose, and treat the diseases."
+            ]
+          },
+          {
+            "Name": "How will Project Singular study DNA?",
+            "Answers": [
+              "Sometimes researchers study only a small part of DNA. They may look at just the part they know can cause a disease. We don’t know much about single ventricle heart disease. So we will look at all or most of your genes. This gives us a detailed look. That way researchers can try to find which genes may play a role in single ventricle heart disease.",
+              "The goal of Project Singular is to collect DNA and health information from many people. This will help speed up single ventricle heart disease research and discovery."
+            ]
+          }
+        ]
+      },
+      {
+        "Title": "Questions About Data",
+        "Items": [
+          {
+            "Name": "How will my information be kept safe?",
+            "Answers": [
+              "Your privacy is very important to us. Your information will be stored in a secure online system.",
+              "The information will be “de-identified.” This means we will take out details like your name or birth date. This makes it harder to identify you from the information. ",
+              "The principal investigator (lead researcher) for Project Singular works for Additional Ventures. They have signed an agreement to keep all information private. If you have questions or concerns, please let us know. You can call us at 650-761-6486. Or you can email us at contact@projectsingular.org."
+            ]
+          },
+          {
+            "Name": "Who will have access to my information?",
+            "Answers": [
+              "Only approved study members on this study will have access to your identifiable information.",
+              "We may share your de-identified information with other researchers.  This means they won’t be able to identify you.  It also means they can’t ask you if they can use your information in future studies.  You won’t get to choose if your information is used in these studies.",
+              "These researchers will be approved by a science review committee before granted access to your deidentified data. \n",
+              "Some of these studies may be on diseases other than single ventricle heart disease. Some researchers may study ways to measure health.  They may want to see how health might change with certain treatments or care.  Some of these studies may be with for-profit companies for commercial uses.  These companies may try to develop new treatments.",
+              "Researchers can’t attempt to identify you. They can't attempt to contact you. Outside researchers must sign an agreement with Project Singular. In it, they agree to only use the information for studies approved by the science review committee. "
+            ]
+          },
+          {
+            "Name": "Could I be identified from my information?",
+            "Answers": [
+              "There is a small risk someone may see your information without permission. There is a chance your information could be breached by accident. This could identify you. We think the chance of this is very small. But we can’t say it is impossible."
+            ]
+          },
+          {
+            "Name": "Will I get my results or learn anything about my (or my child or family member’s) single ventricle heart defect?",
+            "Answers": [
+              "Not right now. We don’t know which parts of DNA cause single ventricle heart defects.  That’s why we’re doing this study.",
+              "This means we don’t know which parts of your (or your family member’s) DNA may cause single ventricle heart disease.  That means we can’t give you any information about you/your family’s genetic cause. ",
+              "In the future, we may make those discoveries. If we do, we may contact you.  We may ask if you want information about your genetics specific to single ventricle heart disease. But we don’t know if or when this will be possible.",
+              "We will be looking at every piece of your DNA and it is possible that we may find changes in your DNA.  These changes may be linked to some other disease that is not single ventricle heart disease.  These results are called “secondary findings.”  They are very rare.  If you have told us you would want to know about a secondary finding, we will notify you.  Most people in this study will not receive a result like this.",
+              "There is a small chance that you might learn about another health condition identified in your genes.  This is called a “secondary finding” because it does not relate to single ventricle disease.  These findings are rare and will be shared with you if you have told us you want to know about it."
+            ]
+          }
+        ]
+      }
+    ],
+    "VentricleHeartDefects": {
+      "Title": "About Single Ventricle Heart Defects",
+      "P1": "Before a baby is born, the first organ to grow is the heart. In most hearts, there are four chambers. Two are atria. The other two are ventricles. In some people, one ventricle doesn’t grow fully. That ventricle may be smaller. Or it may not develop all the way. Or it may be missing an important piece. When any of these things happen it is called a single ventricle heart defect.",
+      "P2": "<p>There are many types of single ventricle heart defects. The most common are:</p><ul><li>Hypoplastic Left Heart Syndrome (HLHS)</li><li>Tricuspid Atresia</li><li>Double Inlet Left Ventricle (DILV)</li><li>Double Outlet Right Ventricle (DORV)</li><li>Single Left Ventricle</li><li>Pulmonary Atresia with Intact Ventricular Septum (PA-IVS)</li><li>Unbalanced Atrioventricular Canal</li></ul>",
+      "P3": "Scientists are trying to find out why some people’s hearts grow this way. But they don't have the full picture. We know that single ventricle heart defects are likely caused by more than one thing.  One cause may be in a person’s DNA. We want to learn more about the DNA of patients with single ventricle heart defects. We may find something in their DNA linked to these defects.",
+      "P4": "Each patient is unique. But right now, most children with a single ventricle heart defect will need three stages of surgery. First, a Norwood or a shunt. Next, a Glenn procedure. And last, a Fontan procedure. These surgeries are done to make a new circulatory system. This allows blood to flow to all parts of the body and bring more oxygen to the lungs. But some patients end up with other health problems after surgery.",
+      "P5": "Right now, there is no cure for single ventricle heart defects and there are other health issues that often develop in other parts of the body. Sometimes the person’s single ventricle can fail.  The best option right now for a failing single ventricle is a heart transplant. But there are a lot of people who need a heart transplant. And there are not enough hearts. Also, a heart transplant has many challenges. It requires lifelong treatment. This can affect quality of life. Also, transplanted organs have a limited lifespan. ",
+      "P6": "We don’t know if Project Singular will lead to a cure. But we believe it will help us learn more. We hope to learn more about people with single ventricle may lead to better treatments and medicines. And maybe one day, it could lead to a cure."
+    }
+  },
   "SDK": {
     "DatePicker": {
       "Day": "Day",
